--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "mermaid": "^11.10.1",
     "next": "15.5.2",
+    "openai": "^5.18.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "zod": "^4.1.5"
