--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "openai": "^5.18.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "zod": "^4.1.5"
+    "react-hot-toast": "^2.6.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -27,7 +28,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.12",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
